--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,16 +4,28 @@
 #
 #    pip-compile requirements-dev.in
 #
+attrs==22.2.0
+    # via pytest
 build==0.10.0
     # via pip-tools
 click==8.1.3
     # via pip-tools
+iniconfig==2.0.0
+    # via pytest
 packaging==23.0
-    # via build
+    # via
+    #   build
+    #   pytest
 pip-tools==6.12.3
     # via -r requirements-dev.in
+pluggy==1.0.0
+    # via pytest
 pyproject-hooks==1.0.0
     # via build
+pytest==7.2.2
+    # via pytest-django
+pytest-django==4.5.2
+    # via -r requirements-dev.in
 wheel==0.40.0
     # via pip-tools
 
