--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -10,8 +10,12 @@ build==0.10.0
     # via pip-tools
 click==8.1.3
     # via pip-tools
+flake8==6.0.0
+    # via -r requirements-dev.in
 iniconfig==2.0.0
     # via pytest
+mccabe==0.7.0
+    # via flake8
 packaging==23.0
     # via
     #   build
@@ -20,6 +24,10 @@ pip-tools==6.12.3
     # via -r requirements-dev.in
 pluggy==1.0.0
     # via pytest
+pycodestyle==2.10.0
+    # via flake8
+pyflakes==3.0.1
+    # via flake8
 pyproject-hooks==1.0.0
     # via build
 pytest==7.2.2
